Ash: Fix WM window resize shadow stacking.

The shadow's stacking order has to be updated with the window's stacking order.

BUG=711378

Review-Url: https://codereview.chromium.org/2824763002
Cr-Commit-Position: refs/heads/master@{#464985}

Former-commit-id: 3b72f20ce26a682fec86bd299ec304b25b1c2145